--- a/src/bigram.ipynb
+++ b/src/bigram.ipynb
@@ -2,35 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hii\n"
+      "cpu\n"
      ]
     }
    ],
    "source": [
-    "print(\"hii\")"
+    "import torch\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print(device)\n",
+    "block_size = 8\n",
+    "batch_size = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('wizard_of_oz.txt', 'r', encoding='utf-8') as f:\n",
-    "    text = f.read()\n",
-    "\n"
+    "    text = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +217,7 @@
        "[61, 58, 65, 65, 68]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +237,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,23 +266,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = torch.tensor(encode(text), dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/rahulgupta/Desktop/ml/llm-from-scratch-fcc/src/bigram.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rahulgupta/Desktop/ml/llm-from-scratch-fcc/src/bigram.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     "data": {
+      "text/plain": [
+       "tensor([80,  1,  1,  ..., 29, 67, 57])"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([80,  1,  1, 28, 39, 42, 39, 44, 32, 49,  1, 25, 38, 28,  1, 44, 32, 29,\n",
+       "         1, 47, 33, 50, 25, 42, 28,  1, 33, 38,  1, 39, 50,  0,  0,  1,  1, 26,\n",
+       "        49,  0,  0,  1,  1, 36, 11,  1, 30, 42, 25, 38, 35,  1, 26, 25, 45, 37,\n",
+       "         0,  0,  1,  1, 25, 45, 44, 32, 39, 42,  1, 39, 30,  1, 44, 32, 29,  1,\n",
+       "        47, 33, 50, 25, 42, 28,  1, 39, 30,  1, 39, 50,  9,  1, 44, 32, 29,  1,\n",
+       "        36, 25, 38, 28,  1, 39, 30,  1, 39, 50])"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(0.8 * len(data))\n",
+    "train_data = data[:n]\n",
+    "val_data = data[n:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([80,  1,  1, 28, 39, 42, 39, 44, 32])\n",
+      "when input is tensor([80]) target is tensor(1)\n",
+      "when input is tensor([80,  1]) target is tensor(1)\n",
+      "when input is tensor([80,  1,  1]) target is tensor(28)\n",
+      "when input is tensor([80,  1,  1, 28]) target is tensor(39)\n",
+      "when input is tensor([80,  1,  1, 28, 39]) target is tensor(42)\n",
+      "when input is tensor([80,  1,  1, 28, 39, 42]) target is tensor(39)\n",
+      "when input is tensor([80,  1,  1, 28, 39, 42, 39]) target is tensor(44)\n",
+      "when input is tensor([80,  1,  1, 28, 39, 42, 39, 44]) target is tensor(32)\n"
      ]
     }
    ],
    "source": [
-    "import torch"
+    "\n",
+    "print(train_data[:block_size+1])\n",
+    "\n",
+    "x = train_data[:block_size]\n",
+    "y = train_data[1:block_size+1]\n",
+    "\n",
+    "\n",
+    "for t in range(block_size):\n",
+    "    context = x[:t + 1]\n",
+    "    target = y[t]\n",
+    "    print('when input is', context, 'target is', target)"
    ]
   },
   {
@@ -287,10 +369,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = torch.rand(5, 3)\n",
-    "print(x)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
