--- a/src/bigram.ipynb
+++ b/src/bigram.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "mps\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "device = 'mps' if torch.has_mps else 'cpu'\n",
     "print(device)\n",
     "block_size = 8\n",
     "batch_size = 4"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[61, 58, 65, 65, 68]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "tensor([80,  1,  1,  ..., 29, 67, 57])"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "        36, 25, 38, 28,  1, 39, 30,  1, 39, 50])"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
