--- a/src/time-command.ipynb
+++ b/src/time-command.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import time\n",
-    "import numpy as np"
+    "import torch "
    ]
   },
   {
@@ -23,9 +22,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12315202\n",
+      "CPU times: user 151 ms, sys: 599 ms, total: 750 ms\n",
+      "Wall time: 123 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "start_time = time.time()\n",
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +56,8 @@
      "output_type": "stream",
      "text": [
       "499999500000\n",
-      "CPU times: user 46.1 ms, sys: 1.36 ms, total: 47.5 ms\n",
-      "Wall time: 46.7 ms\n"
+      "CPU times: user 41 ms, sys: 1.35 ms, total: 42.4 ms\n",
+      "Wall time: 42.3 ms\n"
      ]
     }
    ],
@@ -60,11 +69,6 @@
     "    result += i\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
