--- a/src/torch-examples.ipynb
+++ b/src/torch-examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 60,   8,   4, -30,  95, -60])"
+       "tensor([ -68,  -72,   93, -100,   23,  -60])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "        [2.2000, 3.1000]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "        [0., 0., 0.]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "        [1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "        [0., 0., 0.]])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "tensor([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "tensor([3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "tensor([ 2.,  4.,  6.,  8., 10.])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "tensor([ 3.0000,  4.7500,  6.5000,  8.2500, 10.0000])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "tensor([1.0000e-10, 1.0000e-05, 1.0000e+00, 1.0000e+05, 1.0000e+10])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "        [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "        [0, 0]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,10 +269,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2, 1, 1, 2, 2, 0, 2, 2, 0, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilities = torch.tensor([100.0,100.0,100.0]) # here we define the probability of happening of each index in this case 0,1,2 all three are equally likely to occur\n",
+    "samples = torch.multinomial(probabilities, num_samples=10, replacement=True)\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 1, 1, 1, 1, 1, 1, 0, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "probabilities = torch.tensor([10.0,90.0])\n",
+    "samples = torch.multinomial(probabilities, num_samples=10, replacement=True)\n",
+    "print(samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# concat\n",
+    "tensor = torch.tensor([1, 2, 3, 4])\n",
+    "out = torch.cat((tensor, torch.tensor([5])), dim=0)\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tril(torch.ones(5, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1., 1., 1., 1.],\n",
+       "        [0., 1., 1., 1., 1.],\n",
+       "        [0., 0., 1., 1., 1.],\n",
+       "        [0., 0., 0., 1., 1.],\n",
+       "        [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.triu(torch.ones(5, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., -inf, -inf, -inf, -inf],\n",
+      "        [0., 0., -inf, -inf, -inf],\n",
+      "        [0., 0., 0., -inf, -inf],\n",
+      "        [0., 0., 0., 0., -inf],\n",
+      "        [0., 0., 0., 0., 0.]])\n",
+      "tensor([[1., 0., 0., 0., 0.],\n",
+      "        [1., 1., 0., 0., 0.],\n",
+      "        [1., 1., 1., 0., 0.],\n",
+      "        [1., 1., 1., 1., 0.],\n",
+      "        [1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "out = torch.zeros(5, 5).masked_fill(torch.tril(torch.ones(5, 5)) == 0, float('-inf'))\n",
+    "print(out)\n",
+    "print(torch.exp(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 3, 2])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = torch.zeros(2, 3, 4)\n",
+    "out = input.transpose(0, 2) # 0 is swapped with 2\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor1 = torch.tensor([1, 2, 3])\n",
+    "tensor2 = torch.tensor([4, 5, 6])\n",
+    "tensor3 = torch.tensor([7, 8, 9])\n",
+    "\n",
+    "stacked_tensor = torch.stack([tensor1, tensor2, tensor3])\n",
+    "stacked_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ -7.6628,   2.1805, -12.0102], grad_fn=<SqueezeBackward4>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "sample = torch.tensor([10.0, 10.0, 10.0])\n",
+    "linear = nn.Linear(3, 3, bias=False) # takes n inputs and spits out 3 outputs, after applying weights \n",
+    "print(linear(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1.1964,  2.0531, -0.3151, -5.3420, -7.9935],\n",
+      "       grad_fn=<SqueezeBackward4>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "sample = torch.tensor([1.0, 2.0, 3.0])\n",
+    "linear = nn.Linear(3, 5, bias=False)\n",
+    "'''\n",
+    "Output 1: 1.0 * w1 + 2.0 * w2 + 3.0 * w3\n",
+    "Output 2: 1.0 * w4 + 2.0 * w5 + 3.0 * w6\n",
+    "Output 3: 1.0 * w7 + 2.0 * w8 + 3.0 * w9\n",
+    "Output 4: 1.0 * w10 + 2.0 * w11 + 3.0 * w12\n",
+    "Output 5: 1.0 * w13 + 2.0 * w14 + 3.0 * w15\n",
+    "'''\n",
+    "print(linear(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0900, 0.2447, 0.6652])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# create a tensor\n",
+    "tensor1 = torch.tensor([1.0,2.0,3.0])\n",
+    "\n",
+    "# apply softmax\n",
+    "softmax_output = F.softmax(tensor1, dim=0)\n",
+    "\n",
+    "print(softmax_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.09003057317038046, 0.24472847105479767, 0.6652409557748219]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how softmax is working\n",
+    "\n",
+    "from math import exp\n",
+    "\n",
+    "\n",
+    "total = exp(1) + exp(2) + exp(3)\n",
+    "print([exp(1)/total, exp(2)/total, exp(3)/total])"
+   ]
   },
   {
    "cell_type": "code",
