torch examples complete

--- a/src/torch-examples.ipynb
+++ b/src/torch-examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ -68,  -72,   93, -100,   23,  -60])"
+       "tensor([ -3, -19,  99,  82, -20,  27])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "        [2.2000, 3.1000]])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "        [0., 0., 0.]])"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "        [1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "        [0., 0., 0.]])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "tensor([0, 1, 2, 3, 4])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "tensor([3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "tensor([ 2.,  4.,  6.,  8., 10.])"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "tensor([ 3.0000,  4.7500,  6.5000,  8.2500, 10.0000])"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "tensor([1.0000e-10, 1.0000e-05, 1.0000e+00, 1.0000e+05, 1.0000e+10])"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "        [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "        [0, 0]])"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([2, 1, 1, 2, 2, 0, 2, 2, 0, 2])\n"
+      "tensor([1, 0, 1, 0, 0, 1, 2, 0, 2, 1])\n"
      ]
     }
    ],
@@ -288,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1, 1, 1, 1, 1, 1, 1, 0, 1, 1])\n"
+      "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "tensor([1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "        [1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "        [0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "torch.Size([4, 3, 2])"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "        [7, 8, 9]])"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,14 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ -7.6628,   2.1805, -12.0102], grad_fn=<SqueezeBackward4>)\n"
+      "tensor([ 1.7672, -2.0916,  5.8658], grad_fn=<SqueezeBackward4>)\n"
      ]
     }
    ],
@@ -476,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 1.1964,  2.0531, -0.3151, -5.3420, -7.9935],\n",
+      "tensor([-1.1904, -0.6285, -0.0477,  0.2499,  1.4173],\n",
       "       grad_fn=<SqueezeBackward4>)\n"
      ]
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -549,6 +549,109 @@
     "\n",
     "total = exp(1) + exp(2) + exp(3)\n",
     "print([exp(1)/total, exp(2)/total, exp(3)/total])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 6])\n",
+      "tensor([[-0.5135,  1.0390, -1.2446, -0.0345,  1.0785,  0.0630],\n",
+      "        [-0.1943,  1.1602, -1.1606, -0.9859,  0.8333,  0.3026],\n",
+      "        [-1.2957,  0.4467,  1.3951, -0.8283,  0.7440,  2.6661],\n",
+      "        [-0.2011, -0.2439,  0.4974,  1.2057,  0.6495,  1.6448]],\n",
+      "       grad_fn=<EmbeddingBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# embeddings\n",
+    "\n",
+    "# Initialize an embedding layer\n",
+    "vocab_size = 80\n",
+    "embedding_dim = 6\n",
+    "embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "# Create some input indices\n",
+    "input_indices = torch.LongTensor([1, 5, 3, 2])\n",
+    "\n",
+    "# Apply the embedding layer\n",
+    "embedded_output = embedding(input_indices)\n",
+    "\n",
+    "# The output will be a tensor of shape (4, 100), where 4 is the number of inputs\n",
+    "# and 100 is the dimensionality of the embedding vectors\n",
+    "print(embedded_output.shape)\n",
+    "print(embedded_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 27,  30,  33],\n",
+      "        [ 61,  68,  75],\n",
+      "        [ 95, 106, 117]])\n",
+      "tensor([[ 27,  30,  33],\n",
+      "        [ 61,  68,  75],\n",
+      "        [ 95, 106, 117]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# matrix multiplication\n",
+    "\n",
+    "a = torch.tensor([[1,2],[3,4],[5,6]])\n",
+    "b = torch.tensor([[7,8,9],[10,11,12]])\n",
+    "print(a @ b)\n",
+    "print(torch.matmul(a, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[89., 24.],\n",
+      "        [21., 60.],\n",
+      "        [97., 76.]])\n",
+      "tensor([[0.6753, 0.1893, 0.1210],\n",
+      "        [0.3753, 0.4891, 1.0000]])\n",
+      "torch.float32 torch.float32\n",
+      "tensor([[69.1093, 28.5843, 34.7710],\n",
+      "        [36.7018, 33.3204, 62.5389],\n",
+      "        [94.0296, 55.5313, 87.7368]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# casting\n",
+    "\n",
+    "int_64 = torch.randint(100, (3, 2)).float()\n",
+    "#type int64\n",
+    "print(int_64)\n",
+    "\n",
+    "float_32 = torch.rand(2,3)\n",
+    "#type float32\n",
+    "print(float_32)\n",
+    "\n",
+    "print(int_64.dtype, float_32.dtype)\n",
+    "\n",
+    "result = torch.matmul(int_64, float_32)\n",
+    "print(result)"
    ]
   },
   {
