--- a/src/bigram.ipynb
+++ b/src/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,8 @@
    ],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
     "device = 'mps' if torch.has_mps else 'cpu'\n",
     "print(device)\n",
     "block_size = 8\n",
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -173,12 +175,13 @@
     "\n",
     "\n",
     "chars = sorted(set(text))\n",
-    "pprint(chars)"
+    "pprint(chars)\n",
+    "vocab_size = len(chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +220,7 @@
        "[61, 58, 65, 65, 68]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +240,7 @@
        "'hello'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +287,7 @@
        "tensor([80,  1,  1,  ..., 29, 67, 57])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +312,7 @@
        "        36, 25, 38, 28,  1, 39, 30,  1, 39, 50])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,18 +323,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 30097,  49156,  42546, 103302])\n",
+      "inputs: \n",
+      "torch.Size([4, 8])\n",
+      "tensor([[71, 57, 58, 57,  1, 61, 58, 71],\n",
+      "        [65, 72, 11,  0,  0, 33, 67, 72],\n",
+      "        [ 1, 61, 62, 72,  1, 61, 54, 73],\n",
+      "        [73, 71, 68, 73, 73, 58, 57,  1]], device='mps:0')\n",
+      "targets: \n",
+      "tensor([[57, 58, 57,  1, 61, 58, 71,  1],\n",
+      "        [72, 11,  0,  0, 33, 67, 72, 62],\n",
+      "        [61, 62, 72,  1, 61, 54, 73,  1],\n",
+      "        [71, 68, 73, 73, 58, 57,  1, 68]], device='mps:0')\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(0.8 * len(data))\n",
     "train_data = data[:n]\n",
-    "val_data = data[n:]"
+    "val_data = data[n:]\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    print(ix)\n",
+    "    x = torch.stack([data[i: i + block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1: i + block_size + 1] for i in ix])\n",
+    "    x, y = x.to(device), y.to(device)\n",
+    "    return x, y\n",
+    "\n",
+    "x, y = get_batch('train')\n",
+    "print('inputs: ')\n",
+    "print(x.shape)\n",
+    "print(x)\n",
+    "\n",
+    "print('targets: ')\n",
+    "print(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -366,10 +405,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Adam and AdamW are just some features that we add on to gradient descent\n",
+    "# Adam - is a popular optimization algorithm that combines ideas of momentum. It uses a moving average of both the gradient and its squared value to adapt the learning rate of each parameter.\n",
+    "# AdamW - is a modification of Adam optimizer and it adds weight decay. It generalizes the parameters more. So, instead of having very high level performance or very low level, it takes a little generalize in between.\n",
+    "# the weight significance will actually shrink as it flattens out. Basically prevent over-fitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1if*i]?sAlIk2hD&u9\n",
+      "-)_oiz0;aj&X['52p.I&,K2zkiNvXwPgCnYqv56HJhuA0WO_vUx6gkT6EgQmOAMr[r4FamVzMg0cwnL;J-Qi'GpPPx0Sq5gwRDw-Kp P4]DGQ.,Byt)O'p.9d_G,QJLd,aQ3mQ&XwsjyKhK2vgZG!0XZDlO\"DG2JT6xwv?b2-&JD6pf2?\"&ctm2IBu-0gFN?157zZ 4\n",
+      "I)LeZB'AZ\n",
+      "QHI&r[1hr(*2:K2hcd8&eXh1-\n",
+      "Net_oGzDGFql]pDG&e﻿v2?I!jd6﻿IE06ziMFN58LGLk8Rrw1UWrSlrB):_-K5[1MG[7(a];rSM*NqcBL﻿IMrsHlfcaCwn\n",
+      "114\n",
+      "u!s_okeclDG﻿V)-dY[RPYu'﻿57ADxZ2X;rv,3P1&mLY9Wob[LR2﻿U?SjyjUA;vU9﻿WF,nnq7a]* LQTVD7WF rd&fxvKHq[-'y ;4,2QZ5Jc_W-;1Y[O0W;Vsvp.]8!9nL,\n",
+      "YZk?b﻿d﻿9 i-K;K\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BigramLanguageModel(nn.Module):\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "    def forward(self, index, targets = None):\n",
+    "        logits = self.token_embedding_table(index)\n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "        return logits, loss\n",
+    "    def generate(self, index, max_new_tokens):\n",
+    "        # index is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self.forward(index)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            index_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            index = torch.cat((index, index_next), dim=1) # (B, T+1)\n",
+    "        return index\n",
+    "\n",
+    "model = BigramLanguageModel(vocab_size)\n",
+    "m = model.to(device)\n",
+    "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
+    "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "print(generated_chars)"
+   ]
   }
  ],
  "metadata": {
