--- a/src/torch-examples.ipynb
+++ b/src/torch-examples.ipynb
@@ -656,6 +656,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 5])\n",
+      "tensor([[[0.0800, 0.3569, 0.0948, 0.5243, 0.9490],\n",
+      "         [0.2074, 0.4757, 0.3805, 0.2216, 0.0643],\n",
+      "         [0.9116, 0.3358, 0.8986, 0.2214, 0.1744]],\n",
+      "\n",
+      "        [[0.7819, 0.3846, 0.8480, 0.5696, 0.6885],\n",
+      "         [0.7043, 0.3376, 0.2023, 0.9719, 0.1213],\n",
+      "         [0.0708, 0.9768, 0.4784, 0.7627, 0.8062]]])\n",
+      "torch.Size([6, 5])\n",
+      "tensor([[0.0800, 0.3569, 0.0948, 0.5243, 0.9490],\n",
+      "        [0.2074, 0.4757, 0.3805, 0.2216, 0.0643],\n",
+      "        [0.9116, 0.3358, 0.8986, 0.2214, 0.1744],\n",
+      "        [0.7819, 0.3846, 0.8480, 0.5696, 0.6885],\n",
+      "        [0.7043, 0.3376, 0.2023, 0.9719, 0.1213],\n",
+      "        [0.0708, 0.9768, 0.4784, 0.7627, 0.8062]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.rand(2, 3, 5)\n",
+    "print(a.shape)\n",
+    "print(a)\n",
+    "x, y, z = a.shape\n",
+    "a = a.view(x * y, z)\n",
+    "print(a.shape)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 5])\n",
+      "tensor([[[0.6475, 0.3445, 0.2590, 0.5563, 0.3842],\n",
+      "         [0.0504, 0.2160, 0.6959, 0.9777, 0.7109],\n",
+      "         [0.5247, 0.2178, 0.6470, 0.9346, 0.1020]],\n",
+      "\n",
+      "        [[0.2335, 0.3503, 0.6501, 0.1305, 0.5181],\n",
+      "         [0.1311, 0.2680, 0.8721, 0.8676, 0.4088],\n",
+      "         [0.5977, 0.4717, 0.3604, 0.0420, 0.5911]]])\n",
+      "torch.Size([2, 15])\n",
+      "tensor([[0.6475, 0.3445, 0.2590, 0.5563, 0.3842, 0.0504, 0.2160, 0.6959, 0.9777,\n",
+      "         0.7109, 0.5247, 0.2178, 0.6470, 0.9346, 0.1020],\n",
+      "        [0.2335, 0.3503, 0.6501, 0.1305, 0.5181, 0.1311, 0.2680, 0.8721, 0.8676,\n",
+      "         0.4088, 0.5977, 0.4717, 0.3604, 0.0420, 0.5911]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.rand(2, 3, 5)\n",
+    "print(a.shape)\n",
+    "print(a)\n",
+    "x, y, z = a.shape\n",
+    "a = a.view(x, y * z)\n",
+    "print(a.shape)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
